--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.13.0",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
